# AutonomousRCCar

./: .gitignore  .gitmodules  CMakeLists.txt
core/: Core.cpp  Core.h  LedController.cpp  LedController.h
device/nano33/: Nano33Bluetooth.cpp  Nano33Bluetooth.h  Nano33GattCharacteristic.cpp  Nano33GattCharacteristic.h  Nano33GattService.h  Nano33Led.cpp  Nano33Led.h  main.cpp
hal/: IBluetooth.h  IGattCharacteristic.h  IGattService.h  ILed.h
src/adapters/: ArduinoAccelerator.cpp  ArduinoAccelerator.h  ArduinoBluetooth.cpp  ArduinoBluetooth.h  ArduinoGattCharacteristic.cpp  ArduinoGattCharacteristic.h  ArduinoGattService.cpp  ArduinoGattService.h  ArduinoLed.cpp  ArduinoLed.h  ArduinoUltrasound.cpp  ArduinoUltrasound.h  Nano33Bluetooth.h  Nano33GattCharacteristic.h  Nano33GattService.cpp  Nano33Led.cpp  Nano33Led.h  RCCarMovement.cpp  RCCarMovement.h  RCCarWheel.cpp  RCCarWheel.h
src/app/: main.cpp
src/core/: Core.cpp  Core.h  LedController.h  library.properties
src/core/src/: Core.cpp  Core.h  LedController.cpp  LedController.h  MotionStatus.h  MotionStatusEvaluator.cpp  MotionStatusEvaluator.h
src/core/src/strategies/: IMotionEvaluationStrategy.h  ISpikeDetectionStrategy.h  SimpleMotionEvaluationStrategy.cpp  SimpleMotionEvaluationStrategy.h  SimpleVarianceSpikeDetectionStrategy.cpp  SimpleVarianceSpikeDetectionStrategy.h
src/hal/: ArduinoBLECentral.cpp  ArduinoBLECentral.h  ArduinoBLECharacteristic.cpp  ArduinoBLECharacteristic.h  ArduinoBLEDevice.cpp  ArduinoBLEDevice.h  ArduinoBLEService.cpp  ArduinoBLEService.h  ArduinoClock.h  ArduinoIMUAccelerator.h  ArduinoPinIO.cpp  ArduinoPinIO.h  ArduinoSerial.cpp  ArduinoSerial.h  IBLECentral.h  IBLECharacteristic.h  IBLEDevice.h  IBLEService.h  IClock.h  IIMUAccelerator.h  IPinIO.h  ISerial.h
src/interfaces/: Event.h  IAccelerator.h  IBluetooth.h  IGattCharacteristic.h  IGattService.h  ILed.h  IUltrasound.h  IVehicleMovement.h  IWheel.h
test/: ArduinoLedTest.cpp
test/adapters/: ArduinoAccelerator.cpp  ArduinoBluetooth.cpp  ArduinoGattCharacteristicTest.cpp  ArduinoGattServiceTest.cpp  ArduinoLedTest.cpp  ArduinoUltrasoundTest.cpp  RCCarMovementTest.cpp  RCCarWheelTest.cpp
test/adapters/mock/: MockBLECharacteristic.h  MockBLEDevice.h  MockBLEService.h  MockSerial.h
test/core/: LedControllerTest.cpp  MotionStatusEvaluatorTest.cpp
test/core/strategies/: SimpleMotionEvaluationStrategyTest.cpp  SimpleVarianceSpikeDetectionStrategyTest.cpp
test/mock/: MockAccelerator.h  MockBLECharacteristic.h  MockBLEDevice.h  MockBLEService.h  MockClock.h  MockPinIO.h  MockSerial.h
